src/scss/pardot-forms.scss
@import 'core/variables';

@import 'base/global';

.form {
  padding: 0 2px; /* push in so elems arent hidden */
}

.form-field {
  margin-top: 0;
  margin-bottom: 2rem;
}

.field-label {
  display: block;
  font-weight: 500;
  font-size: 16px;
  margin-bottom: 0.5rem;
}

.description {
  margin-top: 0.5rem;
  margin-bottom: 0;
  font-size: 14px;
}

select,
textarea,
input[type='text'] {
  display: block;
  font-size: 16px;
  line-height: 1;
  border: 1px solid $gray;
  padding: 0.75rem;
  width: 100%;
  background-color: $white;
  appearance: none;
  border-radius: 0;
}

select {
  background-position: calc(100% - 0.5rem) 50%;
  background-repeat: no-repeat;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAABGdBTUEAALGPC/xhBQAAAFVJREFUGBlj5LVMOMDA8N+eAStgPMjEzMzQgFUOKAiSYwRJYjeF8eDn4wscmEAKsJkCEwObgGkKRDdIHGwCiAHTgc4G8eEA5BaIe+BCDCwIJqopMHEAir4V6oFnt/QAAAAASUVORK5CYII=');
}

select:focus,
textarea:focus,
input[type='text']:focus {
  outline: 2px solid $brand-primary;
}

.pd-radio .value > span,
.pd-checkbox .value > span {
  display: block;
  margin-bottom: 0.5rem;
}

label.inline {
  font-size: 16px;
}

textarea {
  min-height: 200px;
  line-height: 1.5;
  resize: vertical;
}

.submit {
  /*text-align: right;*/
}

input[type='submit'] {
  padding: 0.875rem 1.5rem;
  font-family: inherit;
  line-height: inherit;
  border: 0;
  background: $brand-primary;
  color: $white;
  font-size: 16px;
  border-radius: 0;
  appearance: none;
  cursor: pointer;
  transition: 0.2s;
}

input[type='submit']:hover,
input[type='submit']:focus {
  background-color: $green;
  color: $brand-primary;
}

/* custom checkboxes */

input[type='checkbox'] {
  opacity: 0;
  position: absolute;

  & + label {
    display: flex;
    width: 100%;
    font-size: $typescale-2;
    cursor: pointer;

    &:before {
      content: '';
      display: block;
      height: 1rem;
      width: 1rem;
      margin-right: $spacing-2;
      margin-top: $spacing-2;
      border: 1px solid currentColor;
    }
  }

  &:focus + label:before {
    box-shadow: 0 0 0 2px $brand-primary;
  }

  &:checked + label:before {
    background-repeat: no-repeat;
    background-position: center center;
    background-image: url("data:image/svg+xml,%3csvg width='10' height='8' viewBox='0 0 10 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill-rule='evenodd' clip-rule='evenodd' d='M2.12132 5.65686L0 3.53554L1.41421 2.12132L3.53553 4.24265L7.77817 0L9.19239 1.41422L4.94975 5.65686L3.53553 7.07108L2.12132 5.65686Z' fill='%230D395F'/%3e%3c/svg%3e ");
  }
}

/* custom radios */

input[type='radio'] {
  opacity: 0;
  position: absolute;

  & + label {
    display: flex;
    width: 100%;
    font-size: $typescale-2;
    cursor: pointer;

    &:before {
      content: '';
      display: block;
      height: 1rem;
      width: 1rem;
      margin-right: $spacing-2;
      margin-top: $spacing-2;
      border: 1px solid currentColor;
      border-radius: 100%;
    }
  }

  // add outline circle on focus of radio
  &:focus + label:before {
    box-shadow: 0 0 0 2px $brand-primary;
  }

  &:checked + label:before {
    background-color: $white;
    border-color: $brand-primary;
    box-shadow: inset 0 0 0 4px $brand-primary;
  }
}

/* error states */

.form-field.error textarea,
.form-field.error select,
.form-field.error input[type='text'] {
  border-color: $danger;
}

p.error {
  margin-top: 0.5rem;
  margin-bottom: 0;
  font-size: 14px;
  color: $danger;
}

/* required asterisk */

.form-field.required .field-label:after {
  display: inline-block;
  content: '*';
  color: $danger;
}

